# client_server_app

./: CMakeLists.txt  README.md  architecture.txt  graph.txt
source/client/: Client.cpp  Client.h  ClientMain.cpp
source/common/: Protocol.cpp
source/server/: Server.cpp  Server.h  ServerMain.cpp
source/utils/: FileReader.cpp  FileReader.h  InputParser.cpp  InputParser.h  Validator.cpp  Validator.h
